FAGSYSTEM-307795 mors justering fix (#6173)